# MILLI4C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  diff_settings.py  objdiff.json  todo.txt
data/: linker.ld  objdiff.json
data/Info/: Code.json  Matching.json  NonMatching.json  TotalFunctions.json
data/RO/FReal/: SHA256.csv  config.txt  imports.csv
data/US_1.0/: redspark_functions.csv
data/US_1.0/Map/: StaticAllTargetAdr.map
data/Version/: .version
data/Version/US_1.0/: redspark_functions.csv  static_symbols.csv
data/Version/US_1.0/Map/: INFO.txt  RedSpark.map  RedSparkAllTargetVar.map
docs/ARMv6/: Instruction2Cpp.md
docs/Game/: BuildInfo.md
docs/RO/: ModuleInformation.md
include/game/: cpplib.hpp  types.hpp
include/game/Action/: IMiracleChrAct.hpp
include/game/Adsl/Internal/: SharedCountP.hpp
include/game/Battle/: BtlAI.hpp  BtlAbnormal.hpp  BtlAct.hpp  BtlAlc.hpp  BtlCamera.hpp  BtlDfxSystem.hpp  BtlFS.hpp  BtlHandleTmpl.hpp  BtlInvoke.hpp  BtlLink.hpp  BtlListTmpl.hpp  BtlMain.hpp  BtlMsg.hpp  BtlTask.hpp
include/game/Battle/Atk/: BtlAtkMJBox.hpp  BtlAtkMJCam.hpp  BtlAtkMJLuigi.hpp  BtlAtkMJMario.hpp  BtlBrosAtk.hpp
include/game/Battle/BTLFLC/: Flc.hpp  GameManager.hpp
include/game/Battle/Monster/: BtlMon.hpp  BtlMonAtk.hpp  BtlMonDmg.hpp
include/game/Battle/Player/: BtlPc.hpp  BtlPcAtk.hpp  BtlPcDef.hpp  BtlPcDmg.hpp  SJPcShrinkTask.hpp
include/game/Battle/UITM/: MoveItem.hpp
include/game/Boot/: BtlBootInfo.hpp  FieldBootInfo.hpp  HBtlBootInfo.hpp
include/game/CHALLENGE/: FLCCHALLENGE.hpp  MDCHALLENGE.hpp
include/game/Dfx/: Dfx.hpp  DfxBuffer.hpp  DfxChildMan.hpp  DfxLineBB.hpp  DfxLinkList.hpp
include/game/Dream/: DLuigi.hpp  DreamBlock.hpp  DreamCAInfo.hpp  DreamEvent.hpp  DreamFS.hpp  DreamGuideMap.hpp  DreamML.hpp  DreamMain.hpp  DreamSystem.hpp  DreamUtil.hpp
include/game/Dream/Player/: DreamPC.hpp  DreamPlayer.hpp
include/game/Equip/: CalcEquipEff.hpp  DataPc.hpp  GameDB.hpp  GameWork.hpp
include/game/Field/: FReturnCode.hpp  FieldCA.hpp  FieldCamera.hpp  FieldChr.hpp  FieldDfxSystem.hpp  FieldFS.hpp  FieldLoad.hpp  FieldML.hpp  FieldMain.hpp  FieldMdlData.hpp  FieldObj.hpp  FieldSave.hpp  FieldSrtBase.hpp  FieldSystem.hpp
include/game/Field/Etc/: FieldBlock.hpp  FieldBoard.hpp  FieldEnemy.hpp  FieldEvent.hpp  FieldGuideMap.hpp  FieldIcon.hpp  FieldModule.hpp  FieldNumber.hpp  FieldTimer.hpp
include/game/Field/Player/: FieldPC.hpp  FieldPlayer.hpp
include/game/Gfx/: BinGlu3AcsIdxHdr.hpp  MoveWork.hpp  PrimVtxBuf.hpp
include/game/Gfx/CellAnime/: CellAnime.hpp  CellAnimeFmtCtr.hpp  CellAnimeState.hpp  CellAnimeTex.hpp
include/game/Gfx/Dfx/: DfxMemorySys.hpp  DfxResAlc.hpp
include/game/Gfx/UI/: UICommon.hpp  UIListWindowPlus.hpp
include/game/Message/: Message.hpp  MessageDrawer.hpp  MessageSys.hpp  MessageWriter.hpp
include/game/Real/: RealSystem.hpp
include/game/Snd/: GetSndSeParam.hpp  SndSys.hpp
include/game/System/: AllApplication.hpp  AppletMan.hpp  Backup.hpp  BinGlu3AcsIdxHdr.hpp  Boot.hpp  Btn.hpp  CmdCache.hpp  CmdCacheMulti.hpp  CtrController.hpp  DataPc.hpp  DateTimeMan.hpp  GameEvent.hpp  GameMain.hpp  GameWork.hpp  Grp.hpp  Job.hpp  MComSys.hpp  MoveBase.hpp  MoveWork.hpp  RandSys.hpp  RegFlag.hpp  ScriptSystem.hpp  Task.hpp  TaskList.hpp  TaskMainBase.hpp  TaskMan.hpp
include/game/System/Ctr/: CtrArcFile.hpp  CtrController.hpp  CtrJobMan.hpp  CtrLoadModule.hpp  CtrModule.hpp  CtrNwAlc.hpp  CtrSave.hpp  CtrThread.hpp  CtrTp.hpp
include/game/System/Memory/: GxMemAlc.hpp  Mem.hpp  MemAlc.hpp  MemAlcB.hpp  MemAlcBase.hpp  MemAlcCtr.hpp  MemAlcF.hpp  MemAlcH.hpp  MemAlcLockImpl.hpp  MemAlcUnit.hpp  VramAlcRange.hpp
include/game/System/Tasks/: Backup.hpp  Boot.hpp  FieldSystem.hpp  GameEvent.hpp  GameMain.hpp  GlobalEvent.hpp  RealSystem.hpp
include/game/UI/: UIListWindow.hpp  UIListWindowPlus.hpp  UIScrollMessage.hpp
include/game/UITM/: MainProcess.hpp
include/game/hoUtil/: hoUtil.hpp
include/game/ya/: LuigiBox.hpp  MarioBox.hpp
ori/asm/: j_nullsub_18_16_1CFB64.s  j_nullsub_361_1036F0.s  j_nullsub_810_221748.s  j_nullsub_824_1_5A3CB4.s  j_nullsub_949_1E3010.s  j_nullsub_951_1E2A74.s  nullsub_553_19B38C.s  nullsub_956_1ED4C0.s  sub_100000_100000.s  sub_100024_100024.s  sub_100048_100048.s  sub_100090_100090.s  sub_1000A8_1000A8.s  sub_1000B0_1000B0.s  sub_10011C_10011C.s  sub_100124_100124.s  sub_10014C_10014C.s  sub_1001DC_1001DC.s  sub_1001E6_1001E6.s  sub_10020C_10020C.s  sub_10021C_10021C.s  sub_100274_100274.s  sub_10027C_10027C.s  sub_1002EC_1002EC.s  sub_1002F4_1002F4.s  sub_100318_100318.s  sub_100320_100320.s  sub_100364_100364.s  sub_10037C_10037C.s  sub_100390_100390.s  sub_100398_100398.s  sub_1003F0_1003F0.s  sub_10040C_10040C.s  sub_100416_100416.s  sub_100430_100430.s  sub_100480_100480.s  sub_1004AE_1004AE.s  sub_1004B8_1004B8.s  sub_1004E6_1004E6.s  sub_1004F0_1004F0.s  (+6021 more)
private/: .gitignore  DEV.gitignore  PrjInfo.txt  PrjRev.txt  RELEASE.gitignore  cli.txt
private/fruityloops1hw/: read.txt
project/: ARMCC.cmake  global.cmake  tc.cmake
src/: Application.cpp  Stubs.cpp  crt0.cpp
src/RO/: CMakeLists.txt
src/RO/FReal/: FReal.cpp
src/RO/ModuleLib/: MCellAnime.cpp
src/game/: cpplib.cpp  main.cpp
src/game/Act/: IMiracleChrAct.cpp
src/game/Equip/: GameWork.cpp
src/game/Gfx/: MoveWork.cpp
src/game/System/: AppletMan.cpp  Application.cpp  BinGlu3AcsIdxHdr.cpp  Boot.cpp  Btn.cpp  CtrController.cpp  DateTimeMan.cpp  GameWork.cpp  Grp.cpp  Job.cpp  JobMan.cpp  MComSys.cpp  MoveWork.cpp  RandSys.cpp  ScriptSystem.cpp  Task.cpp  TaskList.cpp  TaskMainBase.cpp  TaskMan.cpp
tools/: Build.py  CheckOK.py  Diff.py  ModuleSys.py  Progress.py  Settings.py  Split.py  Upload.py
tools/DisasmScripts/Ghidra/: ExportSymbolInformation.py  ExportUnlinkedSymInfo.py  ParseIDAmap.py  ParseIDAvtable.py  ProduceCSV.py  ProduceN3dsdisasmCfg.py
tools/DisasmScripts/IDA/: ImportGhidraMap.py  cro_ida.py
tools/ROSys/: genModuleFile.py  genStaticFile.py  roConfig.py  roDemangler.py  roUtil.py  staticCopySym.py  staticUtil.py
tools/asm-differ/: diff.py
(+38 files in other folders)
